--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand text-white" href="#">Logo</a>
+              <a class="navbar-brand text-white" href="#">
+                <img src="logo.png" alt="" style="width: 100px;">
+              </a>
               <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon text-white"></span>
               </button>
@@ -46,10 +48,8 @@
 
 <!-- home section start  -->
 
-<div class="container-fluid d-flex align-items-center justify-content-center" id="home" style="height:800px; background-color:yellow;">
+<div class="container-fluid d-flex align-items-center justify-content-center" id="home" style="height: 900px; background-image: url('background.jpg');">
     <div class="cover-text">
-        <h1>Love Value Studio</h1> <br>
-        <h4>Photo Shoot & Live Service</h4>
     </div>
 </div>
 
@@ -90,21 +90,21 @@
     <div class="row">
         <div class="col-md-4 text-center mt-lg-5">
             <a href="live_service.html" class="text-dark" style="text-decoration:none;">
-                <img src="live.jpeg">
+                <img src="streaming.jpg" style="width: 300px;">
                 <h5 class="mt-3">Live Service</h5>
                 <p>This is test paragraph</p>
             </a>
         </div>
         <div class="col-md-4 text-center mt-lg-5">
             <a href="video_service.html" class="text-dark" style="text-decoration:none;">
-                <img src="live.jpeg">
+                <img src="video.jpg" style="width: 300px;">
                 <h5 class="mt-3">Video Service</h5>
                 <p>This is test paragraph</p>
             </a>
         </div>
         <div class="col-md-4 text-center mt-lg-5">
             <a href="photo_service.html" class="text-dark" style="text-decoration:none;">
-                <img src="live.jpeg">
+                <img src="streaming1.jpg" style="width: 300px;">
                 <h5 class="mt-3">Photo Service</h5>
                 <p>This is test paragraph</p>
             </a>
@@ -120,18 +120,14 @@
     <h1 class="text-center my-5">Working Partner</h1>
     <div class="owl-carousel owl-theme" id="owl-carousel">
         <div class="item text-center mt-lg-5">
-            <img src="live.jpeg" >
+            <img src="ws_logo.jpg" >
         </div>
         <div class="item text-center mt-lg-5">
-            <img src="live.jpeg">
+            <img src="atmdlogo.png">
         </div>
         <div class="item text-center mt-lg-5">
-            <img src="live.jpeg">
+            <img src="revlon.jpg">
         </div>
-        <div class="item text-center mt-lg-5">
-            <img src="live.jpeg">
-        </div>
-
     </div>
 </div>
 
@@ -142,7 +138,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <h5 class="text-white ms-lg-5">Logo</h5>
+                <h5 class="text-white ms-lg-5">
+                    <img src="logo.png" alt="" style="width: 200px;">
+                </h5>
             </div>
             <div class="col-md-3">
                 <h5 class="text-white">Connect With Us</h5>
@@ -171,11 +169,11 @@
 <!-- contact section end  -->
 
     <div id="welcome-screen" class="welcome-screen-state-outro">
-        <style> #welcome-screen { position: fixed; overflow: hidden; left: 0; top: 0; width: 100%; height: 100%; z-index: 99999; background: #fff; } #welcome-screen-background { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: #4eb7f5; } #welcome-screen-foreground { position: absolute; left: 0; top: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; } #welcome-screen-logo { position: relative; overflow: hidden; width: 120px; height: 120px; flex: 0 0 auto; display: flex; align-items: center; justify-content: center; } #welcome-screen-logo-image { max-width: 100%; max-height: 100%; } #welcome-screen-logo-cover { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: #4eb7f5; opacity: 0; } #welcome-screen.welcome-screen-state-bg-intro > #welcome-screen-foreground { display: none; } #welcome-screen.welcome-screen-state-outro { background: none; } .welcome-screen-state-logo-intro #welcome-screen-logo { animation: welcome-screen-logo-intro-logo 900ms both cubic-bezier(0.165, 0.84, 0.44, 1); } @keyframes welcome-screen-logo-intro-logo { 0% { opacity: 0; transform: scale(0.5) rotate(-180deg); } 100% { opacity: 1; transform: scale(1) rotate(0); } } .welcome-screen-state-outro #welcome-screen-logo { animation: welcome-screen-outro-logo 300ms 0ms both ease; } @keyframes welcome-screen-outro-logo { 0% { opacity: 1 } 100% { opacity: 0 } } .welcome-screen-state-bg-intro #welcome-screen-background { animation: welcome-screen-bg-intro-background 900ms both cubic-bezier(0.645, 0.045, 0.355, 1); } @keyframes welcome-screen-bg-intro-background { 0% { transform: scaleX(0); } 100% { transform: scaleX(1); } } .welcome-screen-state-outro #welcome-screen-background { animation: welcome-screen-outro-background 900ms reverse both cubic-bezier(0.645, 0.045, 0.355, 1); } @keyframes welcome-screen-outro-background { 0% { transform: scaleX(0); } 100% { transform: scaleX(1); } } .welcome-screen-state-loop #welcome-screen-logo-cover { animation: welcome-screen-loop-logo-cover 2200ms infinite ease-in-out; opacity: 0.85; } @keyframes welcome-screen-loop-logo-cover { 0% { transform: translateX(-120px) } 50% { transform: translateX( 120px) } 100% { transform: translateX( 120px) } } </style>
+        <style> #welcome-screen { position: fixed; overflow: hidden; left: 0; top: 0; width: 100%; height: 100%; z-index: 99999; background: #fff; } #welcome-screen-background { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: #4eb7f5; } #welcome-screen-foreground { position: absolute; left: 0; top: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; } #welcome-screen-logo { position: relative; overflow: hidden; width: 120px; height: 120px; flex: 0 0 auto; display: flex; align-items: center; justify-content: center; } #welcome-screen-logo-image { max-width: 400px; max-height: 100%; } #welcome-screen-logo-cover { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: #4eb7f5; opacity: 0; } #welcome-screen.welcome-screen-state-bg-intro > #welcome-screen-foreground { display: none; } #welcome-screen.welcome-screen-state-outro { background: none; } .welcome-screen-state-logo-intro #welcome-screen-logo { animation: welcome-screen-logo-intro-logo 900ms both cubic-bezier(0.165, 0.84, 0.44, 1); } @keyframes welcome-screen-logo-intro-logo { 0% { opacity: 0; transform: scale(0.5) rotate(-180deg); } 100% { opacity: 1; transform: scale(1) rotate(0); } } .welcome-screen-state-outro #welcome-screen-logo { animation: welcome-screen-outro-logo 300ms 0ms both ease; } @keyframes welcome-screen-outro-logo { 0% { opacity: 1 } 100% { opacity: 0 } } .welcome-screen-state-bg-intro #welcome-screen-background { animation: welcome-screen-bg-intro-background 900ms both cubic-bezier(0.645, 0.045, 0.355, 1); } @keyframes welcome-screen-bg-intro-background { 0% { transform: scaleX(0); } 100% { transform: scaleX(1); } } .welcome-screen-state-outro #welcome-screen-background { animation: welcome-screen-outro-background 900ms reverse both cubic-bezier(0.645, 0.045, 0.355, 1); } @keyframes welcome-screen-outro-background { 0% { transform: scaleX(0); } 100% { transform: scaleX(1); } } .welcome-screen-state-loop #welcome-screen-logo-cover { animation: welcome-screen-loop-logo-cover 2200ms infinite ease-in-out; opacity: 0.85; } @keyframes welcome-screen-loop-logo-cover { 0% { transform: translateX(-120px) } 50% { transform: translateX( 120px) } 100% { transform: translateX( 120px) } } </style>
         <div id="welcome-screen-background"></div>
         <div id="welcome-screen-foreground">
             <div id="welcome-screen-logo">
-                <img id="welcome-screen-logo-image" src="live.jpeg" alt="">
+                <img id="welcome-screen-logo-image" src="logo.png" alt="">
                 <div id="welcome-screen-logo-cover"></div>
             </div>
         </div>
